# py-playaround

./: README.md  pyproject.toml
playaround/: main.py  web.py
poetry-flask/: .env  pyproject.toml
poetry-flask/src/app/: __init__.py  test.py
