[tool.poetry]
name = "playaround"
version = "0.1.0"
description = ""
authors = ["Ahmad Rahimie <newrehmi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
