[tool.poetry]
name = "poetry-flask"
version = "0.1.0"
description = ""
authors = ["Ahmad Rahimie <newrehmi@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_flask", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
