[tool.poetry]
name = "poetry-flask"
version = "0.1.0"
description = ""
authors = ["Ahmad Rahimie <newrehmi@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
poetry-dotenv-plugin = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
